# NeuroWeave-6g

./: .gitignore  README.md  pyproject.toml
docs/: aegis_mixer_comparison.md  architecture.md  benchmark_plan.md  paper_map.md
results/raw/: slice_metrics.csv  step_metrics.csv  summary_metrics.csv
results/reports/: benchmark_report.md
src/: main.py
src/neuroweave_6g/: __init__.py  aegis_mixer.py  benchmark.py  demo.py  learning.py  policies.py  scenario.py  simulator.py  types.py
tests/: test_simulator.py
